--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -12,7 +12,8 @@ position: sticky;
 }
 
 .Navbar ul li a{
-  color: #12b886;
+  /* color: #12b886; */
+  color: #8F43EE;
   text-decoration: none;
   font-size:large;
   font-weight: 800;
@@ -117,7 +118,8 @@ body{background-color: #96f2d7;}
   /* Buy now css */
   body{
 
-    background-color: #fff4e6;
+    background-image: url('https://images.pexels.com/photos/1242348/pexels-photo-1242348.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
+    /* #fff4e6 */
 }
 .border3{
   border: 5px outset rgb(29, 28, 28);
@@ -250,7 +252,8 @@ input::-webkit-inner-spin-button {
   margin-left: 10px;
   margin-right: 40px;
   padding: 25px;
-  background-color:#fff4e6;
+  background-image: url('https://images.pexels.com/photos/531880/pexels-photo-531880.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
+  background-color:#DBDFEA;
   color:#2b8a3e;
   border-radius: 20px;
   font-weight: bold;
@@ -281,14 +284,106 @@ input::-webkit-inner-spin-button {
   box-shadow: 10px 5px 5px green;
   transform: translate(0, -1.1rem);
 }
+.cardlist1{
+ margin-top: 20px
+}
 .cardlist1:hover{
   border-color: green;
   box-shadow: 10px 5px 5px green;
-  transform: translate(0, -1.3rem);
+  /* transform: translate(0, -1.2rem);
+   */
+   transform: scale(1.04);
 
  height:auto;
  width:auto;
 }
+.mainprofile{
+  display: flex;
+  justify-content:center;
+}
+.profile1{
+  margin-top:80px;
+  margin-left:50px;
+  margin-left:50px;
+  margin-bottom:80px;
+  height:550px;
+  width: 350px;
+  border: 2px solid black;
+  border-radius: 20px;
+  
+}
 
+.profile1:hover{
+  border-color: green;
+  box-shadow: 10px 5px 5px #862e9c;
+  transform: scale(1.14);
 
+}
+.chart{
+  display: flex;
+  justify-content:flex-start;
+  margin: 15px;
+}
+.slide1{
+  color:#E76161;
+  font-family: 'Playfair Display', serif;
+  font-weight: 800;
+  font-size: x-large;
+}
+.slide1:hover{
+  transform: scale(1.3);
+  color:#19A7CE;
+  cursor: pointer;
 
+}
+.s1{
+  color: white;
+  width: '90%';
+  margin-top: '14px';
+  border-style: 'outset';
+  border-width: '0.5px';
+   border-color:'#ced4da';
+   border-radius:'5px';
+   background-image:url('https://images.pexels.com/photos/531880/pexels-photo-531880.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1')
+   }
+   .butt1{
+    background-color: white;
+    
+   }
+   .butt1:hover{
+    background-color:#B799FF;
+   }
+  .popu1{
+    height:400px;
+    width:300px;
+  }
+ .popuproduct{
+  display: flex;
+  justify-content:flex-start;
+  margin: 15px;
+  
+ }
+ .popuitem-1 {
+  width:25%;
+  height:550px;
+  border:2px solid red;
+  color:blue;
+  
+ }
+ .popuitem-2{
+  width:45%;
+  height:450px;
+  border:2px solid red;
+  color:blue;
+  margin-top:50px;
+  padding: 20px;
+ }
+ .popuitem-3{
+  width:25%;
+  height:450px;
+  border:2px solid red;
+  color:blue;
+  margin-top:50px;
+  padding: 20px;
+ }
+ 
